--- a/index.html
+++ b/index.html
@@ -6,349 +6,309 @@
 <title>Pedro Cruz — Photography</title>
 
 <style>
+:root{
+  --bg:#0b0b0b;
+  --text:#eaeaea;
+  --shadow:0 10px 28px rgba(0,0,0,.18);
+  --shadow-hover:0 16px 40px rgba(0,0,0,.28);
+}
+
+*{box-sizing:border-box}
 body{
-  font-family:-apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif;
   margin:0;
-  color:#111;
-  background:white;
-  line-height:1.55;
+  font-family:Arial,Helvetica,sans-serif;
+  background:#111;
+  color:#eee;
 }
 
 header{
-  padding:30px 20px 5px 20px;
+  padding:28px;
+  text-align:center;
 }
 
-header h1{ margin:0; }
+h1{margin:0;font-size:28px}
+p{line-height:1.6}
 
-.lang-toggle button{
-  border:1px solid #aaa;
-  background:white;
-  padding:6px 10px;
-  border-radius:4px;
-  cursor:pointer;
+.lang-switch span{
+  cursor:pointer;margin:0 6px;font-size:12px;opacity:.6
 }
+.lang-switch .active{opacity:1;text-decoration:underline}
 
-.container{
-  max-width:1100px;
-  margin:auto;
-  padding:10px 20px 50px 20px;
+/* nav lateral */
+nav#project-nav{
+  position:fixed;
+  left:0;
+  top:120px;
+  width:180px;
+  padding:10px;
 }
-
-.project{
-  margin-top:50px;
+nav#project-nav a{
+  display:block;
+  color:#bbb;
+  margin-bottom:10px;
+  text-decoration:none;
+  font-size:13px;
 }
+nav#project-nav a:hover{color:#fff}
 
-/* GRID */
-.grid{
+/* content offset */
+section{margin-left:200px;padding:20px 28px}
+
+/* project meta */
+.project-meta{margin-top:40px}
+
+/* grid */
+.projects{
   display:grid;
-  gap:18px;
-  grid-template-columns:repeat(auto-fill,minmax(260px,1fr));
-  margin-top:16px;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:16px;
 }
-
-.grid img{
-  width:100%;
-  height:260px;
-  object-fit:cover;
-  border-radius:6px;
+.card{
+  position:relative;
+  background:#000;
+  border-radius:10px;
+  overflow:hidden;
+  box-shadow:var(--shadow);
   cursor:pointer;
-  transition:opacity .2s;
+  transition:.25s;
 }
-.grid img:hover{ opacity:.85; }
+.card:hover{
+  transform:translateY(-4px);
+  box-shadow:var(--shadow-hover);
+}
+.card img{
+  width:100%;
+  height:340px;
+  object-fit:cover;
+}
 
-/* LIGHTBOX */
+/* lightbox */
 .lightbox{
   position:fixed;
   inset:0;
   background:rgba(0,0,0,.92);
-  backdrop-filter:blur(4px);
   display:none;
-  justify-content:center;
   align-items:center;
-  z-index:999;
+  justify-content:center;
+  z-index:20;
 }
 .lightbox img{
   max-width:90%;
-  max-height:80%;
+  max-height:82%;
   border-radius:6px;
 }
-.lightbox-caption{
-  color:white;
+.caption{
+  color:#fff;
   margin-top:14px;
-  max-width:800px;
-  text-align:center;
-  font-size:14px;
-}
-.close-btn{
-  position:absolute;
-  top:20px;
-  right:30px;
-  color:white;
-  font-size:26px;
-  cursor:pointer;
-}
-
-footer{
-  text-align:center;
-  padding:40px 0;
-  color:#666;
   font-size:13px;
+  text-align:center;
 }
+.prev,.next,.close{
+  position:absolute;
+  color:#fff;
+  font-size:34px;
+  cursor:pointer;
+  user-select:none;
+}
+.prev{left:2%;top:50%}
+.next{right:2%;top:50%}
+.close{top:20px;right:30px;font-size:38px}
 
-/* EN hidden by default */
-.en{ display:none; }
+/* footer */
+footer{text-align:center;padding:30px 0;color:#888}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h1>Pedro Cruz</h1>
-
-  <div class="lang-toggle">
-    <button onclick="showPT()">PT</button>
-    <button onclick="showEN()">EN</button>
+  <div class="lang-switch">
+    <span id="btn-pt" class="active" onclick="setLang('pt')">PT</span> |
+    <span id="btn-en" onclick="setLang('en')">EN</span>
   </div>
+
+  <h1>Pedro Cruz</h1>
+  <p>Photography · Improvisation · Presence</p>
 </header>
 
 
-<div class="container">
+<nav id="project-nav"></nav>
 
 
-<!-- =============== PROJECT 1 COR ================= -->
-<div class="project pt">
-  <h2>From Blue Walls to White Silence</h2>
-  <p>Chefchaouen · 2007</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff01.jpg" data-caption="Living City">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff02.jpg" data-caption="Exit">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff04.jpg" data-caption="Observer">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff06.jpg" data-caption="Ascent">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff07.jpg" data-caption="Silence">
+<section>
+  <div class="about">
+    <div class="lang-pt">
+      <p>Nasci em 1971. A fotografia entrou cedo na minha vida como espaço de observação e experimentação.</p>
+    </div>
+    <div class="lang-en" style="display:none;">
+      <p>I was born in 1971. Photography entered my life early as a space for observation and experimentation.</p>
+    </div>
   </div>
-</div>
 
-
-<div class="project en">
-  <h2>From Blue Walls to White Silence</h2>
-  <p>Chefchaouen · 2007</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff01.jpg" data-caption="Living City">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff02.jpg" data-caption="Exit">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff04.jpg" data-caption="Observer">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff06.jpg" data-caption="Ascent">
-    <img loading="lazy" src="assets/cor/Paisagen_cheff07.jpg" data-caption="Silence">
+  <!-- PROJECT 1 -->
+  <div class="project-meta" id="project-1">
+    <h2 data-title-pt="From Blue Walls to White Silence" data-title-en="From Blue Walls to White Silence">
+      From Blue Walls to White Silence
+    </h2>
+    <p>Chefchaouen · 2007</p>
   </div>
-</div>
+  <div class="projects" id="projects-cor"></div>
 
-
-
-
-
-<!-- =============== PROJECT 2 PB ================= -->
-<div class="project pt">
-  <h2>Under the Same Weather</h2>
-  <p>2012</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/pb/Paisagen_pb01.jpg" data-caption="Antes">
-    <img loading="lazy" src="assets/pb/Paisagen_pb02.jpg" data-caption="Céu">
-    <img loading="lazy" src="assets/pb/Paisagen_pb03.jpg" data-caption="Passagem">
-    <img loading="lazy" src="assets/pb/Paisagen_pb05.jpg" data-caption="Entre">
-    <img loading="lazy" src="assets/pb/Paisagen_pb08.jpg" data-caption="Noite">
+  <!-- PROJECT 2 -->
+  <div class="project-meta" id="project-2">
+    <h2 data-title-pt="Under the Same Weather" data-title-en="Under the Same Weather">
+      Under the Same Weather
+    </h2>
+    <p>2012</p>
   </div>
-</div>
+  <div class="projects" id="projects-pb"></div>
 
-
-<div class="project en">
-  <h2>Under the Same Weather</h2>
-  <p>2012</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/pb/Paisagen_pb01.jpg" data-caption="Before">
-    <img loading="lazy" src="assets/pb/Paisagen_pb02.jpg" data-caption="Sky">
-    <img loading="lazy" src="assets/pb/Paisagen_pb03.jpg" data-caption="Passage">
-    <img loading="lazy" src="assets/pb/Paisagen_pb05.jpg" data-caption="Between">
-    <img loading="lazy" src="assets/pb/Paisagen_pb08.jpg" data-caption="Night">
+  <!-- PROJECT 3 -->
+  <div class="project-meta" id="project-3">
+    <h2 data-title-pt="Inside the Sound" data-title-en="Inside the Sound">
+      Inside the Sound
+    </h2>
+    <p>2024</p>
   </div>
-</div>
+  <div class="projects" id="projects-mia"></div>
 
-
-
-
-
-<!-- =============== PROJECT 3 MIA ================= -->
-<div class="project pt">
-  <h2>Inside the Sound</h2>
-  <p>2024</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/mia/mia01.jpg">
-    <img loading="lazy" src="assets/mia/mia03.jpg">
-    <img loading="lazy" src="assets/mia/mia05.jpg">
-    <img loading="lazy" src="assets/mia/mia07.jpg">
-    <img loading="lazy" src="assets/mia/mia09.jpg">
+  <!-- PROJECT 4 -->
+  <div class="project-meta" id="project-4">
+    <h2 data-title-pt="Last Night" data-title-en="Last Night">
+      Last Night
+    </h2>
+    <p>2016</p>
   </div>
-</div>
+  <div class="projects" id="projects-cas"></div>
 
-
-<div class="project en">
-  <h2>Inside the Sound</h2>
-  <p>2024</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/mia/mia01.jpg">
-    <img loading="lazy" src="assets/mia/mia03.jpg">
-    <img loading="lazy" src="assets/mia/mia05.jpg">
-    <img loading="lazy" src="assets/mia/mia07.jpg">
-    <img loading="lazy" src="assets/mia/mia09.jpg">
+  <!-- PROJECT 5 — LINK PARA A PÁGINA -->
+  <div class="project-meta" id="project-5">
+    <h2>
+      <a href="./projects/structures-of-permanence.html" style="color:#fff;text-decoration:none;">
+        Structures of Permanence →
+      </a>
+    </h2>
+    <p>Long-term photographic project</p>
   </div>
-</div>
 
+</section>
 
-
-
-
-<!-- =============== PROJECT 4 CAS ================= -->
-<div class="project pt">
-  <h2>Last Night</h2>
-  <p>2016</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/cas/cas01.jpg">
-    <img loading="lazy" src="assets/cas/cas02.jpg">
-    <img loading="lazy" src="assets/cas/cas03.jpg">
-    <img loading="lazy" src="assets/cas/cas04.jpg">
-    <img loading="lazy" src="assets/cas/cas05.jpg">
-    <img loading="lazy" src="assets/cas/cas06.jpg">
-    <img loading="lazy" src="assets/cas/cas07.jpg">
-    <img loading="lazy" src="assets/cas/cas08.jpg">
-  </div>
-</div>
-
-
-<div class="project en">
-  <h2>Last Night</h2>
-  <p>2016</p>
-
-  <div class="grid">
-    <img loading="lazy" src="assets/cas/cas01.jpg">
-    <img loading="lazy" src="assets/cas/cas02.jpg">
-    <img loading="lazy" src="assets/cas/cas03.jpg">
-    <img loading="lazy" src="assets/cas/cas04.jpg">
-    <img loading="lazy" src="assets/cas/cas05.jpg">
-    <img loading="lazy" src="assets/cas/cas06.jpg">
-    <img loading="lazy" src="assets/cas/cas07.jpg">
-    <img loading="lazy" src="assets/cas/cas08.jpg">
-  </div>
-</div>
-
-
-
-
-
-<!-- ===== PROJECT 5 — STRUCTURES OF PERMANENCE ===== -->
-<div class="project pt">
-  <h2>Estruturas de Permanência</h2>
-  <p>Projecto de Longa Duração</p>
-
-  <div class="grid">
-
-    <img loading="lazy" src="assets/estrutura/_1est18.jpg" data-caption="Estrutura suspensa no crepúsculo">
-    <img loading="lazy" src="assets/estrutura/_2est28.jpg" data-caption="O espaço entre o que permanece">
-    <img loading="lazy" src="assets/estrutura/_3est37.jpg" data-caption="Geometria de contenção">
-    <img loading="lazy" src="assets/estrutura/_4est32.jpg" data-caption="Parede que recorda o espaço">
-    <img loading="lazy" src="assets/estrutura/_5est36.jpg" data-caption="Vestígio erguido">
-    <img loading="lazy" src="assets/estrutura/_6est35.jpg" data-caption="O lugar depois do lugar">
-    <img loading="lazy" src="assets/estrutura/_7est21.jpg" data-caption="Estrutura em suspensão">
-    <img loading="lazy" src="assets/estrutura/_8est33.jpg" data-caption="Linha sobre linha">
-    <img loading="lazy" src="assets/estrutura/_9est19.jpg" data-caption="Persistência silenciosa">
-    <img loading="lazy" src="assets/estrutura/_10est14.jpg" data-caption="Sombra habitada">
-    <img loading="lazy" src="assets/estrutura/_11est29.jpg" data-caption="Antenas em intervalo">
-    <img loading="lazy" src="assets/estrutura/_12est30.jpg" data-caption="Céu dividido">
-    <img loading="lazy" src="assets/estrutura/_13est10.jpg" data-caption="O regresso da forma">
-
-  </div>
-</div>
-
-
-
-<div class="project en">
-  <h2>Structures of Permanence</h2>
-  <p>Long-term project</p>
-
-  <div class="grid">
-
-    <img loading="lazy" src="assets/estrutura/_1est18.jpg" data-caption="Suspended structure at dusk">
-    <img loading="lazy" src="assets/estrutura/_2est28.jpg" data-caption="The space between what remains">
-    <img loading="lazy" src="assets/estrutura/_3est37.jpg" data-caption="Geometry of containment">
-    <img loading="lazy" src="assets/estrutura/_4est32.jpg" data-caption="Wall that remembers space">
-    <img loading="lazy" src="assets/estrutura/_5est36.jpg" data-caption="Elevated remnant">
-    <img loading="lazy" src="assets/estrutura/_6est35.jpg" data-caption="The place after the place">
-    <img loading="lazy" src="assets/estrutura/_7est21.jpg" data-caption="Structure in suspension">
-    <img loading="lazy" src="assets/estrutura/_8est33.jpg" data-caption="Line over line">
-    <img loading="lazy" src="assets/estrutura/_9est19.jpg" data-caption="Silent persistence">
-    <img loading="lazy" src="assets/estrutura/_10est14.jpg" data-caption="Inhabited shadow">
-    <img loading="lazy" src="assets/estrutura/_11est29.jpg" data-caption="Antennas in interval">
-    <img loading="lazy" src="assets/estrutura/_12est30.jpg" data-caption="Divided sky">
-    <img loading="lazy" src="assets/estrutura/_13est10.jpg" data-caption="The return of form">
-
-  </div>
-</div>
-
-
-</div>
-
-
-<!-- ===== LIGHTBOX ===== -->
-<div class="lightbox" id="lightbox">
-  <div class="close-btn" onclick="closeLightbox()">✕</div>
-  <div>
-    <img id="lightbox-img">
-    <div class="lightbox-caption" id="lightbox-caption"></div>
-  </div>
-</div>
 
 
 <footer>
-  © Pedro Cruz
+  © 2025 — Pedro Cruz
 </footer>
 
 
+<!-- LIGHTBOX -->
+<div class="lightbox" id="lightbox">
+  <span class="close" onclick="closeLightbox()">×</span>
+  <span class="prev" onclick="changeImage(-1)">❮</span>
+  <img id="lightbox-img">
+  <div class="caption" id="caption"></div>
+  <span class="next" onclick="changeImage(1)">❯</span>
+</div>
+
+
 <script>
-function showPT(){
-  document.querySelectorAll('.pt').forEach(e=>e.style.display='block');
-  document.querySelectorAll('.en').forEach(e=>e.style.display='none');
-}
+// =============================
+//   LANGUAGE
+// =============================
+let currentLang='pt';
 
-function showEN(){
-  document.querySelectorAll('.pt').forEach(e=>e.style.display='none');
-  document.querySelectorAll('.en').forEach(e=>e.style.display='block');
-}
+function setLang(lang){
+  currentLang=lang;
+  document.querySelector('.lang-pt').style.display=lang==='pt'?'block':'none';
+  document.querySelector('.lang-en').style.display=lang==='en'?'block':'none';
+  document.getElementById('btn-pt').classList.toggle('active',lang==='pt');
+  document.getElementById('btn-en').classList.toggle('active',lang==='en');
 
-const imgs=document.querySelectorAll('.grid img');
-const lb=document.getElementById('lightbox');
-const lbImg=document.getElementById('lightbox-img');
-const lbCap=document.getElementById('lightbox-caption');
-
-imgs.forEach(img=>{
-  img.addEventListener('click',()=>{
-    lb.style.display='flex';
-    lbImg.src=img.src;
-    lbCap.textContent=img.dataset.caption || '';
+  document.querySelectorAll('.project-meta h2').forEach(h=>{
+    if(h.dataset['titlePt']){
+      h.innerText = lang==='pt'? h.dataset['titlePt'] : h.dataset['titleEn'];
+    }
   });
-});
 
-function closeLightbox(){
-  lb.style.display='none';
-  lbImg.src='';
+  document.querySelectorAll('#project-nav a').forEach(a=>{
+    a.innerText = currentLang==='pt'
+      ? a.dataset.titlePt
+      : a.dataset.titleEn;
+  });
 }
 
-lb.addEventListener('click',e=>{
-  if(e.target===lb) closeLightbox();
+
+// =============================
+//   IMAGES / PROJECT DATA
+// =============================
+const imageGroups={
+  cor:{ images:["01","02","04","06","07"].map(n=>`./assets/cor/Paisagen_cheff${n}.jpg`) },
+  pb:{  images:["01","02","03","05","08"].map(n=>`./assets/pb/Paisagen_pb${n}.jpg`) },
+  mia:{ images:["01","03","05","07","09"].map(n=>`./assets/mia/mia${n}.jpg`) },
+  cas:{ images:["01","02","03","04","05","06","07","08"].map(n=>`./assets/cas/cas${n}.jpg`) }
+};
+
+
+// =============================
+//   GRID BUILDER
+// =============================
+function createCards(groupId){
+  const container=document.getElementById('projects-'+groupId);
+  imageGroups[groupId].images.forEach((src,i)=>{
+    const card=document.createElement('div');
+    card.className='card';
+    card.onclick=()=>openLightbox(groupId,i);
+    card.innerHTML=`<img loading="lazy" src="${src}">`;
+    container.appendChild(card);
+  });
+}
+
+['cor','pb','mia','cas'].forEach(createCards);
+
+
+// =============================
+//   LIGHTBOX
+// =============================
+let currentGroup=null;
+let index=0;
+
+function openLightbox(group,i){
+  currentGroup=group;
+  index=i;
+  updateLightbox();
+  document.getElementById('lightbox').style.display='flex';
+}
+function closeLightbox(){
+  document.getElementById('lightbox').style.display='none';
+}
+function changeImage(step){
+  index=(index+step+imageGroups[currentGroup].images.length)%imageGroups[currentGroup].images.length;
+  updateLightbox();
+}
+function updateLightbox(){
+  document.getElementById('lightbox-img').src=imageGroups[currentGroup].images[index];
+  document.getElementById('caption').innerText=`${index+1} / ${imageGroups[currentGroup].images.length}`;
+}
+
+
+// =============================
+//   PROJECT NAV
+// =============================
+const nav=document.getElementById('project-nav');
+
+document.querySelectorAll('.project-meta').forEach(sec=>{
+  const a=document.createElement('a');
+  a.href='#'+sec.id;
+
+  const h=sec.querySelector('h2');
+
+  a.dataset.titlePt=h.dataset.titlePt || h.innerText.trim();
+  a.dataset.titleEn=h.dataset.titleEn || h.innerText.trim();
+
+  a.innerText=a.dataset.titlePt;
+
+  nav.appendChild(a);
 });
+
 </script>
 
 </body>
